create snapshot for productService

--- a/ProductService/src/main/resources/application.properties
+++ b/ProductService/src/main/resources/application.properties
@@ -16,3 +16,5 @@ server.error.include-message=always
 server.error.include-binding-errors=always
 
 axon.eventhandling.processors.product-group.mode=subscribing
+
+logging.level.org.axonframework.axonserver.connector.event.axon.AxonServerEventStore=DEBUG
